NT/ds/security/cryptoapi/pkitrust/tests/signing/bad/bfincrit.cab
version https://git-lfs.github.com/spec/v1
oid sha256:026fc8ffc7afb92860415f749598957ea6d23eee19e7c32faba7ce3032bd00c4
size 6750
